# Blog-Research-Feed

./: .env.example  .gitignore  ARCHITECTURE.md  BRF_FETCHER_DESIGN.md  HANDOFF.md  README.md  SOURCES_HEALTH.md  permission_test.txt  pyproject.toml  sources.md  sources.opml
.github/workflows/: daily.yml
agent/: agent.yaml  environment.yaml  reader.yaml  reader_prompt.md  reviewer.yaml  reviewer_prompt.md  system_prompt.md
brf/: __init__.py  __main__.py  aggregator.py  config.py  daily.py  feed_item.py  firecrawl_client.py  io.py  main.py  podcast.py  rss.py  slack.py  sources.opml  sources.yaml  sources_config.py  x_client.py  youtube.py
brf/fetchers/: __init__.py  _rss_parsing.py  base.py  firecrawl_index.py  podcast.py  rss.py  x.py  youtube.py
cron/: __init__.py  daily.py
docs/agent_sdk/: INDEX.md  hooks.md  modifying-system-prompts.md  overview.md  python-sdk-readme.md  python.md  slash-commands.md  streaming-vs-single-mode.md  subagents.md  todo-tracking.md  typescript-sdk-readme.md  typescript.md
docs/managed_agents/: INDEX.md  agent-setup.md  define-outcomes.md  environments.md  files.md  github.md  mcp-connector.md  memory.md  migration.md  multi-agent.md  observability.md  overview.md  quickstart.md  sessions.md  tools.md  vaults.md  webhooks.md
orchestrator/: __init__.py  daily.py
scripts/: create_agent.py  upload_env.py  upload_skill.py
skills/brf-cli/: SKILL.md
tests/: test_feed_item.py  test_firecrawl_index_fetcher.py  test_podcast_fetcher.py  test_rss_fetcher.py  test_x_client.py  test_x_fetcher.py  test_youtube_fetcher.py
(+1 files in other folders)
