[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blog-research-feed"
version = "0.2.1"
description = "AI-news aggregation: the `brf` tool CLI (agent-side) plus the `orchestrator` package (host-side cron + Slack receiver)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Blog Research Feed" }]
dependencies = [
    "click",
    "anthropic",
    "firecrawl-py",
    "httpx",
    "python-dotenv",
    "pyyaml",
    "youtube-transcript-api",
    "yt-dlp",
    "requests",
]

[project.scripts]
brf = "brf.main:cli"

[tool.setuptools.packages.find]
include = ["brf*", "orchestrator*"]

[tool.setuptools.package-data]
brf = ["sources.opml", "sources.yaml"]
